<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutDisenoFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutDisenoFondo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:orientation="vertical" >
        

        <TextView
            android:id="@+id/textViewColorFondo"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:hint="@string/diseno_colorfondo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroupColorFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioColorAmarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:hint="@string/diseno_coloramarillo" />

            <RadioButton
                android:id="@+id/radioColorAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/diseno_colorazul" />

            <RadioButton
                android:id="@+id/radioColorRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/diseno_colorrojo" />

            <RadioButton
                android:id="@+id/radioColorVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/diseno_colorverde" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diseno_estilo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diseno_estado"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioButtonDisenoEstadoPersonalizado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/diseno_estado_personalizado" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonDisenoCancelar"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:hint="@string/diseno_cancelar" />

            <Button
                android:id="@+id/buttonDisenoAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diseno_aceptar" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>