<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/tb_register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tb_register_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tb_name_hint"
        android:inputType="textEmailAddress" />  
    
    <EditText
        android:id="@+id/tb_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tb_register_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/tb_email_hint"
        android:ems="10"
        android:inputType="textPersonName"/>    
    
    <EditText
        android:id="@+id/tb_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/tb_user_hint"
        android:inputType="textPersonName" />
    
     <EditText
        android:id="@+id/tb_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_register_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tb_password_hint"
        android:inputType="textPassword" />
    
     <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_register_password"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_login" />
     
</RelativeLayout>