<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/cuenta_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuenta_usuario"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="222dp"
            android:layout_height="33dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/cuenta_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuenta_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="222dp"
            android:layout_height="33dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/cuenta_geolocalizacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cuenta_geolocalizacion"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/checkBoxPublica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cuenta_geolocalizacion_publica" />

                <CheckBox
                    android:id="@+id/checkBoxPrivada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cuenta_geolocalizacion_privada" />

                <CheckBox
                    android:id="@+id/checkBoxPersonalizado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cuenta_geolocalizacion_personalizada" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/textViewIdioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuenta_idioma"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/idiomaSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:entries="@array/idioms_array"/>

        <TextView
            android:id="@+id/textViewBiografia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuenta_biografia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

</RelativeLayout>