<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:gravity="center_vertical"
     android:id="@+id/RelativeLayoutUserOpcionContrasena">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewContrasenaAntigua"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_antigua"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextContrasenaAntigua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewContrasenaNueva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/contrasena_nueva"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextContrasenaNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewContrasenaConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Contrasena_confirmar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextContrasenaConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="13.82" >

            <Button
                android:id="@+id/buttonContrasenaCancelar"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena_cancelar" />

            <Button
                android:id="@+id/buttonContrasenaAceptar"
                android:layout_width="99dp"
                android:layout_height="match_parent"
                android:hint="@string/contrasena_aceptar" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>